fix reflow reason for special height reflow, reevaluate height reflow conditions as tables with fixed layout might have one reflow less bug 293761 r/sr=roc a=asa